<resources>
    <string name="app_name">Inventaire</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Tableau de bord</string>
    <string name="title_notifications">Notifications</string>
    <string name="liste1">Liste 1</string>
    <string name="liste2">Liste 2</string>
    <string name="liste3">Liste 3</string>
    <string name="navigation_drawer_open">Ouvrir le panneau latéral</string>
    <string name="navigation_drawer_close">Fermer le panneau latéral</string>


    <!-- Messages -->
    <string name="message_empty_layout_changes">Ajoutez un bien pour commencer.</string>
    <string name="message_zoom_touch_expand">Toucher une photo pour l\'agrandir.</string>


    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Image agrandie (touchez pour fermer)</string>


    <!-- Main -->
    <string name="title_change_list_name">Changer le libellé</string>
    <string name="dialog_positive_option">OK</string>
    <string name="list_name_already_exists">Ce nom de liste existe déjà</string>
    <string name="list_name_too_long">Le nom de la liste est trop long</string>
    <string name="list_name_empty">La liste doit avoir un nom</string>
    <string name="dialog_negative_option">Annuler</string>
    <string name="category">Category : </string>


    <!-- AjouterBien -->
    <string name="toolbar_title_ajouter_bien">Ajouter un bien</string>
    <string name="delete_photo_bien">Vous devez déjà supprimer une photo</string>
    <string name="permission_denied">L\'application n\'est pas autorisée à accéder aux documents. Verifier les permissions dans les réglages de l\'appareil</string>
    <string name="pdf_file">Facture choisie : </string>
    <string name="control_item_name">Le nom ne peut être vide</string>
    <string name="date_format_message">La date doit être au format jj/mm/aaaa</string>
    <string name="empty_list">Veuillez selectionner au moins une liste</string>
    <string name="bills_directory_name">factures</string>
    <string name="new_picture">Nouvelle photo</string>
    <string name="from_camera">Depuis votre caméra</string>
    <string name="number_pictures_max">Vous ne pouvez mettre que 4 photos pour un bien</string>
    <string name="delete_photo_approval">Voulez-vous vraiment supprimer la photo </string>
    <string name="title_delete_photo">Supprimer une photo</string>
    <string name="ajouter_bien_dialog_positive_option">Oui</string>
    <string name="ajouter_bien_dialog_negative_option">Non</string>
    <string name="hint_name">Nom</string>
    <string name="select_categorie">Selectionner une catégorie :</string>
    <string name="select_list">Selectionner une ou plusieurs listes :</string>
    <string name="purchase_date_hint">Date d\'achat (jj/mm/aaaa)</string>
    <string name="description_item_hint">Description du bien</string>
    <string name="item_comments_hint">Commentaire sur le bien</string>
    <string name="serial_number_hint">Numéro de serie</string>
    <string name="price_hint">Prix</string>
    <string name="button_add_photo">Ajouter une photo</string>
    <string name="button_add_bill">Ajouter une facture</string>
    <string name="button_add_item">Ajouter le bien</string>
    <string name="item_description">Description du bien</string>
    <string name="modify_bill_button">Modifier la facture</string>
    <string name="validate_item_modifications_button">Valider les modifications</string>


    <!-- InfosBien -->
    <string name="no_bill">Pas de facture pour ce bien</string>
    <string name="acquisition_date">Date d\'acquisition : </string>
    <string name="entry_date">Date de saisie : </string>
    <string name="item_price">Prix du bien : </string>
    <string name="serial_number">Numéro de série : </string>
    <string name="item_infos">Informations sur le bien</string>
    <string name="list_appartenance">Listes d\'appartenance : </string>
    <string name="comments">Commentaires : </string>
    <string name="display_bill_button">Afficher la facture</string>
    <string name="modify_button">Modifier</string>
    <string name="delete_button">Supprimer</string>


    <!-- AjouterCategorie -->
    <string name="toolbar_title_ajouter_categorie">Ajouter une catégorie</string>
    <string name="message_categorie_added_1_2">La catégorie </string>
    <string name="message_categorie_added_2_2"> a bien été ajoutée</string>
    <string name="categorie_exists"> existe déjà</string>
    <string name="description_hint">Description</string>
    <string name="add_button">Ajouter</string>


    <!-- ModifierCategorie -->
    <string name="toolbar_title_modifier_categorie">Modifier une catégorie</string>
    <string name="modified_categorie"> a bien été modifiée</string>


    <!-- ExporterListe -->
    <string name="toolbar_title_exporter_liste">Exporter une liste</string>
    <string name="categories_to_export">Choix des catégories à exporter : </string>
    <string name="exporter_liste_dialog_negative_option">Valider</string>
    <string name="location_csv_file">Votre fichier CSV se trouve dans le dossier téléchargement</string>
    <string name="select_one_categorie">Vous devez sélectionner au moins une categorie</string>
    <string name="select_one_list">Vous devez sélectionner une liste à exporter</string>
    <string name="file_name">Vous devez écrire un nom de fichier</string>
    <string name="file_name_exporter_list">Nom du fichier</string>
    <string name="export_list_button">Exporter au format CSV</string>


    <!-- ModifierPersonne -->
    <string name="toolbar_title_modifier_personne">Informations du compte</string>
    <string name="missing_fields">Tous les champs doivent être remplis correctement</string>
    <string name="surname_hint">Prénom</string>
    <string name="birth_date_hint">Date de naissance (jj/mm/aaaa)</string>
    <string name="mail_adress_hint">Adresse mail</string>
    <string name="postal_adress_hint">Adresse Postale</string>
    <string name="phone_hint">Téléphone</string>

</resources>
