<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.categorie.ModifierCategorie"
    android:weightSum="1">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/editCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="34dp"
                android:layout_weight="0.08"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:maxLength="20" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/editCategorie"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:maxLength="100" />

            <Button
                android:id="@+id/buttonModifierCategorie"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editDescription"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="onClickModifCategorie"
                android:text="@string/modify_button"
                android:textColor="@android:color/background_light" />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>
