<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.liste.ExportListe">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/nomListeAexporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:hint="@string/file_name_exporter_list"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <!--
                        <TextView
                            android:id="@+id/explicationCategorie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@+id/checkListe1"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="Selectionner une catégorie :" />

                                    <Button
                                        android:id="@+id/select_categorie"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:layout_below="@+id/explicationCategorie"
                                        android:onClick="annexe"
                                        android:layout_marginBottom="10dp"
                                        android:layout_marginTop="10dp" /> -->

            <TextView
                android:id="@+id/explicationListe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/nomListeAexporter"
                android:layout_marginTop="10dp"
                android:text="@string/select_list" />

            <TextView
                android:id="@+id/affichageCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkListe1"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />

            <RadioButton
                android:id="@+id/checkListe3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/explicationListe"
                android:layout_marginEnd="12dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="18sp"
                android:onClick="annexe"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/checkListe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/explicationListe"
                android:layout_centerHorizontal="true"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="18sp"
                android:onClick="annexe"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/checkListe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/explicationListe"
                android:layout_marginStart="10dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="18sp"
                android:onClick="annexe"
                android:visibility="visible" />

            <Button
                android:id="@+id/exporterListe"
                android:layout_width="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/affichageCategorie"
                android:layout_marginTop="10dp"
                android:onClick="onClickExportListe"
                android:text="@string/export_list_button" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>